# decentralised-reputation-system

./: cabal.project  decentralised-reputation-system.cabal
src/: ReputationToken.hs
src/Offchain/: Offchain.hs
src/Onchain/: RatingToken.hs  RatingValidatorScript.hs
test/: Test.hs
