Cabal-Version:      2.4
Name:               decentralised-reputation-system
Version:            0.1.0.0
Author:             Qin Li
Maintainer:         liqin1116@gmail.com
Build-Type:         Simple
Copyright:          © 2022 Qin Li
License:            Apache-2.0
License-files:      LICENSE

library
  hs-source-dirs:     src
  exposed-modules:    Onchain.RatingToken
                    , Onchain.RatingValidatorScript
                    , Offchain.Offchain
  build-depends:      aeson
                    , base ^>=4.14.1.0
                    , containers
                    , data-default
                    , freer-extras
                    , playground-common
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-ledger-constraints
                    , plutus-tx-plugin
                    , plutus-tx
                    , text
  default-language:   Haskell2010
  ghc-options:        -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

test-suite rating-contract-tests
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  other-modules:
  default-language: Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:       base ^>=4.14.1.0
                     , containers
                     , data-default
                     , decentralised-reputation-system
                     , freer-extras
                     , lens
                     , plutus-contract
                     , plutus-ledger
                     , plutus-tx
                     , QuickCheck
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin -any
